--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             background-color: #f0f0f0;
         }
         #player {
-            width: 80%;
-            max-width: 800px;
+            width: flex;
+            max-width: flex;
             display: none; /* Initially hide the video element */
         }
         #playButton {
