--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
             display: none;
             margin-top: 20px;
         }
+        #pipButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 20px;
+            background-color: #1e90ff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -60,6 +70,7 @@
     <div class="card-slider" id="videoCards">
         <!-- Cards will be dynamically populated here -->
     </div>
+    <button id="pipButton">Toggle PiP</button>
     <div id="spinner">
         <img src="spinner.gif" alt="Loading...">
     </div>
