--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             background-color: #f0f0f0;
         }
         #player {
-            width: 80%;
-            max-width: 800px;
+            width: 640px;
+            height: 360px;
+            max-width: 100%;
+            max-height: 100%;
         }
         .card-slider {
             display: flex;
@@ -53,16 +55,6 @@
             display: none;
             margin-top: 20px;
         }
-        #pipButton {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 20px;
-            background-color: #1e90ff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
@@ -70,7 +62,6 @@
     <div class="card-slider" id="videoCards">
         <!-- Cards will be dynamically populated here -->
     </div>
-    <button id="pipButton">Toggle PiP</button>
     <div id="spinner">
         <img src="spinner.gif" alt="Loading...">
     </div>
