--- a/index.html
+++ b/index.html
@@ -5,57 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Player</title>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        #player {
-            width: 640px;
-            height: 360px;
-            max-width: 100%;
-            max-height: 100%;
-        }
-        .card-slider {
-            display: flex;
-            overflow-x: auto;
-            scroll-snap-type: x mandatory;
-            -webkit-overflow-scrolling: touch;
-            position: absolute;
-            bottom: 20px;
-            width: 80%;
-        }
-        .card {
-            flex: none;
-            width: 200px;
-            margin: 10px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            scroll-snap-align: start;
-            cursor: pointer;
-        }
-        .card img {
-            width: 100%;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-        }
-        .card-content {
-            padding: 10px;
-            text-align: center;
-        }
-        #spinner {
-            display: none;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <video id="player" controls></video>
