--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <video id="player" controls></video>
     <div class="card-slider" id="videoCards">
-        <!-- Cards will be dynamically populated here -->
+        <div class="loading-container" id="loadingContainer">
+            <div class="loading-spinner"></div>
+        </div>
     </div>
     <div id="spinner">
         <img src="spinner.gif" alt="Loading...">
