--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <video id="player" controls></video>
+    <div id="player-container">
+        <video id="player" controls></video>
+    </div>
     <div class="card-slider" id="videoCards">
         <div class="loading-container" id="loadingContainer">
             <div class="loading-spinner"></div>
