--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div id="spinner">
         <img src="spinner.gif" alt="Loading...">
     </div>
+    <div id="epg-container">
+        <!-- EPG will be dynamically populated here -->
+    </div>
 
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
