--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="main-container">
         <div id="player-container">
             <video id="player" controls></video>
+            <div id="current-channel">
+                <p>Now Playing: <span id="channel-name">None</span></p>
+            </div>
         </div>
         <div id="epg-container">
             <!-- EPG will be dynamically populated here -->
