--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div id="main-container">
         <div id="player-container">
             <video id="player" controls></video>
-            <div id="current-channel">
+        </div>
+        <div id="epg-wrapper">
+            <div id="now-playing">
                 <p>Now Playing: <span id="channel-name">None</span></p>
             </div>
-        </div>
-        <div id="epg-container">
-            <!-- EPG will be dynamically populated here -->
+            <div id="epg-container">
+                <!-- EPG will be dynamically populated here -->
+            </div>
         </div>
     </div>
     <div class="card-slider" id="videoCards">
