finish for today

--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
             </div>
         </div>
     </div>
-    <div class="card-slider" id="videoCards">
-        <div class="loading-container" id="loadingContainer">
-            <div class="loading-spinner"></div>
+    <div class="card-slider-wrapper">
+        <div class="card-slider-header">
+            <div class="card-slider-title">Saluran MYFreeview</div>
+        </div>
+        <div class="card-slider-container">
+            <div class="card-slider" id="videoCards">
+                <div class="loading-container" id="loadingContainer">
+                    <div class="loading-spinner"></div>
+                </div>
+            </div>
+            <div class="fade-effect"></div>
         </div>
     </div>
     <div id="spinner">
