add dynamic background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
     <div id="main-container">
         <div id="player-container">
             <video id="player" controls></video>
