try to add epg details on player but not showing

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="wave"></div>
-     <div class="wave"></div>
-     <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
     <div id="main-container">
         <div id="player-container">
             <video id="player" controls></video>
+            <div id="epg-tooltip" class="epg-tooltip"></div> <!-- Tooltip element -->
         </div>
         <div id="epg-wrapper">
             <div id="now-playing">
