--- a/index.html
+++ b/index.html
@@ -25,21 +25,13 @@
             </div>
         </div>
     </div>
-    <div class="card-slider-wrapper">
-        <div class="card-slider-header">
-            <div class="card-slider-title">Saluran MYFreeview</div>
-        </div>
-        <div class="card-slider-container">
-            <div class="card-slider" id="videoCards">
-                <div class="loading-container" id="loadingContainer">
-                    <div class="loading-spinner"></div>
-                </div>
-            </div>
-            <div class="fade-effect"></div>
-        </div>
+    <div id="sliders-container">
+        <!-- Card sliders will be dynamically populated here -->
     </div>
-    <div id="spinner">
-        <img src="spinner.gif" alt="Loading...">
+    <div id="spinner" style="display: none;">
+        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+
+    <dotlottie-player src="https://lottie.host/6cec0a31-105b-4ef4-a1b7-6339964ee751/FNJDvPRJU0.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
     </div>
 
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
