--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zastv</title>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preload" href="styles.css" as="style">
 </head>
 <body>
     <div class="wave"></div>
@@ -38,7 +39,7 @@
     <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.0/dist/hls.min.js"></script>
-    <script src="source.js"></script>
-    <script src="app.js"></script>
+    <script src="source.js" defer></script>
+    <script src="app.js" defer></script>
 </body>
 </html>
