--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <video id="player" controls></video>
             <div id="epg-tooltip" class="epg-tooltip"></div> <!-- Tooltip element -->
             <div id="channel-icon-container">
-                <img id="channel-icon" src="" alt="Channel Icon" style="display:none; width: 50px; height: 50px;">
+                <img id="channel-icon" src="" alt="Channel Icon" style="display:none;">
             </div>
         </div>
 
